--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer>
   <div class="container">
-    &copy; 2025 Cocktail App — Made with 🥂 by Bennhy🍹
+    &copy; 2025 Cocktail App — Made with 🥂 by Benny🍹
   </div>
 </footer>
